fix: avoid white space over header bg curve

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -88,6 +88,10 @@ h3 {
   }
 }
 
+.header-bg-curve {
+  margin-top: -5px;
+}
+
 .main-container {
   padding: 0 40px 30px;
 
